--- a/src/qt/forms/aboutdialog.ui
+++ b/src/qt/forms/aboutdialog.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>About Litecoin</string>
+   <string>About UFO</string>
   </property>
   <layout class="QHBoxLayout" name="horizontalLayout_2">
    <item>
@@ -50,7 +50,7 @@
           <cursorShape>IBeamCursor</cursorShape>
          </property>
          <property name="text">
-          <string>&lt;b&gt;Litecoin&lt;/b&gt; version</string>
+          <string>&lt;b&gt;UFO&lt;/b&gt; version</string>
          </property>
          <property name="textInteractionFlags">
           <set>Qt::LinksAccessibleByMouse|Qt::TextSelectableByKeyboard|Qt::TextSelectableByMouse</set>
@@ -92,7 +92,9 @@
        </property>
        <property name="text">
         <string notr="true">Copyright &amp;copy; 2009-YYYY The Bitcoin developers
-Copyright &amp;copy; 2011-YYYY The Litecoin developers</string>
+        Copyright &amp;copy; 2011-YYYY The Litecoin developers
+        Copyright &amp;copy; 2012-YYYY The Peercoin developers
+        Copyright &amp;copy; YYYY The UFO Coin developers</string>
        </property>
        <property name="textFormat">
         <enum>Qt::RichText</enum>
